--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,16 @@ spring.application.name=demo
 server.port=9001
 # for https
 server.forward-headers-strategy=framework 
-spring.datasource.url=jdbc:mysql://localhost:3306/warranty?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/nxspeed_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Amypo
+spring.datasource.password=(pass)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl.auto=update
+spring.jpa.hibernate.ddl.auto= create/update
+//update(It doesnt create new db in every login)  [or]  create(it create new db in each login)
+
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+//it shows how the ddl commands are created
+
+spring.jpa.properties.format_sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.MySql8Dialect
