--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 spring.application.name=demo
 # Don't change the port
-server.port=9001
+server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
+
 spring.datasource.url=jdbc:mysql://localhost:3306/warranty?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database_platform=org.hibernate.dialect.MySQL8Dialect
-jwt.secret=12345678901234567890123456789012
-jwt.expirationMs=3600000
+spring.jpa.open-in-view=false
+spring.jpa.properties.format_sql=true
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.database-performing=org.hibernate.dialect.MySQL8Dialect
