--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,10 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.format_sql=true
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.database-performing=org.hibernate.dialect.MySQL8Dialect
+
+# Swagger
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# JWT defaults (overridden in tests via reflection)
+jwt.secret=defaultsecretdefaultsecretdefaultsecret12
+jwt.expirationMs=3600000
